fix archives year aligning

--- a/sass/custom/_style.scss
+++ b/sass/custom/_style.scss
@@ -48,7 +48,7 @@
 }
 
 .archives {
-  h1.year { padding-top: 30px; }
+  .year { padding-top: 30px; }
 }
 
 .post {
